--- a/src/app/worldcountries/worldcountries.component.html
+++ b/src/app/worldcountries/worldcountries.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card-deck">
-    <div *ngFor="let c of flags | slice:104" class="card mb-5" style="min-width: 18rem;">
+    <div *ngFor="let c of flags" class="card mb-5" style="min-width: 18rem;">
       <img src="{{c.flag}}" class="card-img-top" alt="...">
        <div class="card-body">
        <h4 class="card-text">{{c.name}}</h4>
